# heim_api

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  pyproject.toml
heim_bill_pay/: apps.py
heim_core/: asgi.py  settings.py  urls.py  wsgi.py
heim_customers/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
heim_customers/migrations/: 0001_initial.py  0002_alter_customer_customer_id.py  0003_remove_customer_id_alter_customer_customer_id.py
heim_insurance/: apps.py
heim_livescan/: apps.py
heim_money/: apps.py
heim_parcel/: apps.py
heim_utils/: apps.py  utils.py
postman/: Heim_API.postman_collection.json  Heim_Development.postman_environment.json
src/: manage.py
src/core/: settings.py  urls.py
src/customer_management/: admin.py  apps.py  models.py  views.py
src/customer_management/application/: __init__.py
src/customer_management/domain/: __init__.py  events.py  models.py  value_objects.py
src/customer_management/infrastructure/: event_dispatcher.py  repositories.py
src/customer_management/interfaces/: admin.py  urls.py  views.py
src/customer_management/migrations/: 0001_initial.py  0002_address.py
src/customer_management/tests/: test_commands.py  test_events.py  test_queries.py  test_value_objects.py
src/customers/: admin.py  models.py  views.py
src/customers/application/: __init__.py  services.py
src/heim_core/: asgi.py  settings.py  urls.py  wsgi.py
src/motor_vehicle_services/: admin.py  apps.py  models.py  views.py
src/payments/: models.py  tests.py  views.py
(+77 files in other folders)
