[project]
name = "heim-api"
version = "0.0.0"
description = "heim API"
authors = [
    {name = "Guillermo A. Moran-Arreola",email = "g.a.moran.arreola@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10, <4"
dependencies = [
    "django (>=5.2.4,<6.0.0)",
    "psycopg-binary (>=3.2.9,<4.0.0)",
    "psycopg (>=3.2.9,<4.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "djangorestframework-simplejwt (>=5.5.0,<6.0.0)",
    "django-cors-headers (>=4.7.0,<5.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "django-environ (>=0.12.0,<0.13.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"

